<resources>
    <string name="app_name">Portfolio</string>
    <string name="introduction">Introduction</string>
    <string name="components">Components</string>
    <string name="settings">Settings</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="common_continue">Continue</string>
    <string name="landing_body">Do you want to see the app where the UI is created with Jetpack Compose or XML layout?</string>
    <string name="landing_subtitle">This can be changed at any moment in the settings.</string>
    <string name="jetpack_compose">Jetpack Compose</string>
    <string name="xml_layout">XML layout</string>
    <string name="jetpack_compose_description">Jetpack Compose is a modern Android UI toolkit by Google, designed to simplify and accelerate the development of native user interfaces with a declarative and component-based approach.</string>
    <string name="xml_layout_description">XML layout in Android is a markup language used to define the structure and appearance of user interfaces for Android apps, specifying the arrangement and properties of UI elements like buttons and text views within a parent layout. It allows developers to design and organize the visual aspects of their app\'s user interface.</string>
    <string name="introduction_hello">Hello, I am</string>
    <string name="introduction_name">Christiano Bolla</string>
    <string name="introduction_function">Mobile developer</string>
    <string name="introduction_body">I have been working since 2017 as an Android Developer. Proficient in turning an idea into a fully functioning and UI/UX stunning application.</string>
    <string name="about_me">About me</string>
    <string name="why_hire_me">Why Hire Me?</string>
    <string name="about_me_body">Skilled Android Developer with over 5 years of experience in developing applications using Java and Kotlin. Someone who has a passion for staying up-to-date with all new technologies, constantly seeking to explore and take advantage of the latest advancements in the Android Framework. Committed to delivering robust, user-friendly, and scalable applications. A fast learner with an ability to adapt quickly to new technologies and a strong focus for code quality and best practices.</string>
    <string name="let_s_chat">Let\'s chat!</string>
    <string name="experience">Experience</string>
    <string name="completed">Completed</string>
    <string name="completed_projects">15+ projects</string>
    <string name="experience_in_years">%1$s+ years</string>
    <string name="service">Service</string>
    <string name="service_subtitle">I\'m Good At</string>
    <string name="see_more">See more</string>
    <string name="portfolio">Portfolio</string>
    <string name="portfolio_subtitle">My Work</string>
    <string name="testimonials">Testimonials</string>
    <string name="what_they_say">What They Say</string>
    <string name="work_experience">Work Experience</string>
    <string name="dynamic_material_you">Dynamic (Material You)</string>
    <string name="app_version">App version</string>
    <string name="layout_system">Layout system</string>
    <string name="display_mode">Display mode</string>
    <string name="change_layout_mode_title">Are you sure?</string>
    <string name="change_layout_mode_body">Changing the layout system will result in a full reboot of the app. Are you sure you want to continue?</string>
    <string name="cancel">Cancel</string>
    <string name="unsupported_feature">Unsupported feature</string>
    <string name="ok">OK</string>
    <string name="unsupported_feature_dynamic_colors_dialog_body">Dynamic colors (a.k.a. Material You) is only available for Android phones with version 12 or higher. If possible, please update to use this setting.</string>
    <string name="experiences">Experiences</string>
</resources>