<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="state"
            type="be.cbconnectit.portfolio.app.ui.main.introduction.IntroductionState" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSecondaryContainer"
        android:orientation="vertical"
        android:paddingVertical="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_horizontal"
            android:text="@string/about_me"
            android:textAppearance="?textAppearanceTitleMedium"
            android:textColor="?colorOnBackground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/why_hire_me"
            android:textAppearance="?textAppearanceHeadlineMedium"
            android:textColor="?colorOnBackground" />

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="?colorPrimaryInverse" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/about_me_body"
            android:textAppearance="?textAppearanceBodyMedium"
            android:textColor="?colorOnSecondaryContainer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="2dp">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_experience" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center_horizontal"
                        android:text="@string/experience"
                        android:textAppearance="?textAppearanceTitleMedium"
                        android:textColor="?colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_horizontal"
                        android:text="@{@string/experience_in_years(state.experienceInYears)}"
                        android:textAppearance="?textAppearanceLabelSmall"
                        android:textColor="?colorOnSurface"
                        tools:text="@string/experience_in_years" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_assignment_turned_in" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center_horizontal"
                        android:text="@string/completed"
                        android:textAppearance="?textAppearanceTitleMedium"
                        android:textColor="?colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_horizontal"
                        android:text="@string/completed_projects"
                        android:textAppearance="?textAppearanceLabelSmall"
                        android:textColor="?colorOnSurface" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</layout>