<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <merge
        tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/introduction_hello"
            android:textAppearance="?textAppearanceTitleLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/introduction_name"
            android:textAppearance="?textAppearanceHeadlineLarge"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/introduction_function"
            android:textAppearance="?textAppearanceBodyLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/introduction_body"
            android:textAppearance="?textAppearanceBodyLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvGithub"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:cardCornerRadius="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_github" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvLinkedIn"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_linkedin" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </merge>
</layout>