<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="title"
            type="String" />
        <variable
            name="subtitle"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="12dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/about_me"
            android:text="@{title}"
            android:textAppearance="?textAppearanceTitleMedium"
            android:textColor="?colorOnBackground"
            app:layout_constraintEnd_toStartOf="@id/btnSeeMore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/why_hire_me"
            android:textAppearance="?textAppearanceHeadlineMedium"
            android:textColor="?colorOnBackground"
            android:text="@{subtitle}"
            app:layout_constraintEnd_toStartOf="@id/btnSeeMore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="?colorPrimaryInverse"
            app:layout_constraintEnd_toStartOf="@id/btnSeeMore"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeeMore"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="0dp"
            android:text="@string/see_more"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>